# stac-check

./: .env-example  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stac-best-practices.md  stac-check.config.yml  test_dict.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yml  test-runner.yml
_modules/: index.html
_modules/stac_check/: cli.html  lint.html
_sources/: api.rst.txt  index.rst.txt
docs/: api.rst  cli.rst  conf.py  index.rst  requirements.txt
docs/stac_check/: cli.html  lint.html
examples/: lint_dict.py
pdoc/: index.html  search.js  stac_check.html
pdoc/stac_check/: cli.html  index.html  lint.html  logo.html
sample_files/: core-item.json
sample_files/0.9.0/: bad-item.json
sample_files/1.0.0/: 20201211_223832_cs2.json  bad-item.json  catalog.json  catalog_many_links.json  collection-no-title.json  collection.json  collections.json  (+9 more)
stac_check/: api_lint.py  cli.py  display_messages.py  fast_validator_wrapper.py  item_collection.py  lint.py  logo.py  main.py  stac-check.config.yml  utilities.py
tests/: test.config.yml  test_cli.py  test_config.py  test_lint.py  test_lint_assets.py  test_lint_dictionary.py  test_lint_geometry.py  test_lint_pydantic.py  test_lint_recursion.py  test_lint_stac_api.py
(+12 files in other folders)
